Make the role also manage Nginx virtualhosts

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,10 @@
 ---
-- name: reload uwsgi
+- name: uwsgi restart
   service:
     name: uwsgi
+    state: restarted
+
+- name: nginx reload
+  service:
+    name: nginx
     state: reloaded
