--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -42,6 +42,9 @@ app_nginx_static_root: ''
 # over SSL, serve all resources within the same TCP connection
 app_nginx_ssl_spdy_enabled: true
 
+# the name of SSL snippet (swap the asterisk) : /etc/nginx/snippets/*.ssl.conf
+app_nginx_ssl_snippet: ''
+
 # if the served assets must be cached by clients
 app_nginx_static_cache_assets_enabled: false
 
