Implements envvars support

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -72,13 +72,14 @@ app_nginx_limitreq_per_second: 10
 app_uwsgi_plugin_rack_ruby23_rails_path: .
 app_uwsgi_plugin_rack_ruby23_rack_file: config.ru
 app_uwsgi_plugin_rack_ruby23_env: production
-
+app_uwsgi_plugin_rack_ruby23_env_vars: {}
 
 ## python plugin variables ####################################################
 
 app_uwsgi_plugin_python_venv_path: ''
-
+app_uwsgi_plugin_python_env_vars: {}
 
 ## python3 plugin variables ####################################################
 
 app_uwsgi_plugin_python3_venv_path: ''
+app_uwsgi_plugin_python3_env_vars: {}
